--- a/main/_Главная.md
+++ b/main/_Главная.md
@@ -1,130 +1,50 @@
-# Главная страница для изучения C++ в Obsidian
+# Главная страница документации по C++
 
-Добро пожаловать в ваш центральный хаб по изучению C++! Здесь вы найдете тщательно организованную структуру ссылок на различные разделы, которые помогут вам глубоко погрузиться в этот мощный и многогранный язык программирования.
+Добро пожаловать в вашу документацию по C++ для опытных специалистов! Этот документ охватывает ключевые аспекты языка C++ и предлагает углубленное изучение тем, которые важны для профессиональной разработки. Перейдите по ссылкам в содержании, чтобы изучить каждый раздел.
 
----
+## Содержание
 
-## 📚 Основные разделы
-
-### 🔹 [Введение в C++](Введение%20в%20C++.md)
-Обзор истории развития языка, его особенностей и современных возможностей.
-
----
-
-### 🔹 [Базовый синтаксис и структуры данных](Синтаксис.md)
-Подробное изучение синтаксиса C++, включая переменные, типы данных, операторы, циклы, функции и основные структуры данных.
-
----
-
-### 🔹 [Указатели, ссылки и управление памятью](Указатели%20и%20ссылки.md)
-Глубокое понимание работы с указателями и ссылками, динамическое выделение памяти, использование умных указателей (`std::unique_ptr`, `std::shared_ptr`, `std::weak_ptr`) и идиомы RAII.
-
----
-
-### 🔹 [Объектно-ориентированное программирование (ООП)](ООП.md)
-Расширенное изучение ООП в C++: классы и объекты, наследование (включая множественное и виртуальное), полиморфизм, инкапсуляция и абстракция.
-
----
-
-### 🔹 [Шаблоны и обобщённое программирование](Шаблоны.md)
-Продвинутая работа с шаблонами функций и классов, метапрограммирование на этапе компиляции, SFINAE, концепты (C++20) и техники оптимизации.
-
----
-
-### 🔹 [Стандартная библиотека C++ (STL)](STL.md)
-Глубокое изучение контейнеров, итераторов и алгоритмов STL. Использование продвинутых структур данных (`unordered_map`, `deque`, `set`), а также создание пользовательских аллокаторов и итераторов.
-
----
-
-### 🔹 [Многопоточность и параллелизм](Многопоточность.md)
-Создание высокопроизводительных многопоточных приложений: работа с потоками, синхронизация, атомарные операции, блокировки, параллельные алгоритмы и корутины (C++20).
-
----
-
-### 🔹 [Исключения и обработка ошибок](Исключения.md)
-Механизмы обработки исключений, проектирование безопасного кода, гарантии безопасности исключений, использование `noexcept` и альтернативные методы обработки ошибок.
-
----
-
-### 🔹 [Функциональное программирование в C++](Функциональное_программирование.md)
-Использование лямбда-выражений, функциональных объектов, `std::function`, каррирование и композиция функций.
+1. [Введение](Введение.md)
+2. [Основы C++](Основы%20C++.md)
+    - [Классы и объекты](Основы%20C++/Классы%20и%20объекты.md)
+    - [Наследование и полиморфизм](Основы%20C++/Наследование%20и%20полиморфизм.md)
+    - [Указатели и ссылки](Основы%20C++/Указатели%20и%20ссылки.md)
+3. [Управление памятью](Управление%20памятью.md)
+    - [Динамическое выделение памяти](Управление%20памятью/Динамическое%20выделение%20памяти.md)
+    - [RAII (Resource Acquisition Is Initialization)](Управление%20памятью/RAII.md)
+    - [Умные указатели: std::unique_ptr, std::shared_ptr, std::weak_ptr](Управление%20памятью/Умные%20указатели.md)
+4. [Многопоточность и параллелизм](Многопоточность%20и%20параллелизм.md)
+    - [Потоки и задачи (std::thread, std::async)](Многопоточность%20и%20параллелизм/Потоки%20и%20задачи.md)
+    - [Мьютексы и условные переменные](Многопоточность%20и%20параллелизм/Мьютексы%20и%20условные%20переменные.md)
+    - [Атомарные операции и память (std::atomic)](Многопоточность%20и%20параллелизм/Атомарные%20операции.md)
+5. [Оптимизация производительности](Оптимизация%20производительности.md)
+    - [Алгоритмическая оптимизация](Оптимизация%20производительности/Алгоритмическая%20оптимизация.md)
+    - [Оптимизация кэша и работы с памятью](Оптимизация%20производительности/Оптимизация%20кэша.md)
+    - [Параллельные алгоритмы (C++17)](Оптимизация%20производительности/Параллельные%20алгоритмы.md)
+6. [Современные особенности C++](Современные%20особенности%20C++.md)
+    - [Лямбда-функции и захваты переменных](Современные%20особенности%20C++/Лямбда-функции%20и%20захваты.md)
+    - [Move-семантика и rvalue-ссылки](Современные%20особенности%20C++/Move-семантика%20и%20rvalue.md)
+    - [Концепции и модули (C++20)](Современные%20особенности%20C++/Концепции%20и%20модули.md)
+7. [Инструменты разработки](Инструменты%20разработки.md)
+    - [Компиляторы и сборка проектов](Инструменты%20разработки/Компиляторы%20и%20сборка%20проектов.md)
+    - [Инструменты статического анализа](Инструменты%20разработки/Инструменты%20статического%20анализа.md)
+    - [Отладка и профилирование](Инструменты%20разработки/Отладка%20и%20профилирование.md)
+8. [Шаблоны проектирования](Шаблоны%20проектирования.md)
+    - [Порождающие шаблоны](Шаблоны%20проектирования/Порождающие%20шаблоны.md)
+    - [Структурные шаблоны](Шаблоны%20проектирования/Структурные%20шаблоны.md)
+    - [Поведенческие шаблоны](Шаблоны%20проектирования/Поведенческие%20шаблоны.md)
+9. [Практики безопасного программирования](Практики%20безопасного%20программирования.md)
+    - [Защита от переполнения буфера](Практики%20безопасного%20программирования/Защита%20от%20переполнения%20буфера.md)
+    - [Избежание гонок данных](Практики%20безопасного%20программирования/Избежание%20гонок%20данных.md)
+    - [Обработка исключений](Практики%20безопасного%20программирования/Обработка%20исключений.md)
+10. [Вопросы для собеседований](Вопросы%20для%20собеседований.md)
+    - [Вопросы по памяти](Вопросы%20для%20собеседований/Вопросы%20по%20памяти.md)
+    - [Вопросы по многопоточности](Вопросы%20для%20собеседований/Вопросы%20по%20многопоточности.md)
+    - [Вопросы по шаблонам проектирования](Вопросы%20для%20собеседований/Вопросы%20по%20шаблонам.md)
+11. [Продвинутая работа с шаблонами (templates)](Продвинутая%20работа%20с%20шаблонами.md)
+    - [Шаблоны функций и классов](Продвинутая%20работа%20с%20шаблонами/Шаблоны%20функций%20и%20классов.md)
+    - [Метапрограммирование](Продвинутая%20работа%20с%20шаблонами/Метапрограммирование.md)
+12. [Полезные ссылки](Полезные%20ссылки.md)
 
 ---
 
-### 🔹 [Модули и пакетирование кода](Модули.md)
-Изучение новой системы модулей в C++20, их преимущества перед заголовочными файлами и влияние на время компиляции и организацию проектов.
-
----
-
-### 🔹 [Современные возможности C++ (C++11/14/17/20/23)](Современный_CPP.md)
-Обзор ключевых нововведений в последних стандартах C++, включая концепты, корутины, модули, рефлексию (C++23) и ожидаемые изменения в будущих версиях.
-
----
-
-### 🔹 [Инструменты и экосистема C++](Инструменты.md)
-Обзор современных инструментов разработки: компиляторы, системы сборки (CMake, Meson), пакетные менеджеры (Conan, vcpkg), статический анализ, профилирование и отладка.
-
----
-
-### 🔹 [Паттерны проектирования и архитектуры](Паттерны.md)
-Изучение классических и современных паттернов проектирования, их реализация в C++, антипаттерны и лучшие практики архитектуры программного обеспечения.
-
----
-
-### 🔹 [Сетевое программирование и многоплатформенная разработка](Сетевое_программирование.md)
-Создание сетевых приложений с использованием Boost.Asio, работы с сокетами, протоколами и обеспечение кроссплатформенности приложений.
-
----
-
-### 🔹 [Интеграция с другими языками и технологиями](Интеграция.md)
-Связывание C++ с Python (pybind11), Java (JNI), использование WebAssembly и взаимодействие с различными API и фреймворками.
-
----
-
-### 🔹 [Практические проекты и кейсы](Проекты.md)
-Разбор реальных проектов, оптимизация, рефакторинг и применение полученных знаний на практике.
-
----
-
-## 🌐 Внешние ресурсы и сообщества
-
-- **[cppreference.com](https://en.cppreference.com/)** — Детальное справочное руководство по языку и стандартной библиотеке.
-- **[C++ Core Guidelines](https://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines)** — Рекомендации по стилю и практикам программирования.
-- **[Stack Overflow](https://stackoverflow.com/questions/tagged/c%2b%2b)** — Сообщество для вопросов и ответов по программированию.
-- **[ISO C++](https://isocpp.org/)** — Официальный сайт сообщества стандартизации C++.
-
----
-
-## 📝 Заметки и рекомендации
-
-- **Структурируйте информацию**: Для каждого раздела создавайте подробные заметки с примерами, диаграммами и пояснениями.
-- **Практика важнее теории**: Реализуйте небольшие проекты или компоненты для закрепления материала.
-- **Следите за обновлениями**: Язык развивается, поэтому регулярно обновляйте знания и материалы.
-- **Общайтесь с сообществом**: Участвуйте в конференциях, митапах и онлайн-дискуссиях.
-
----
-
-## 🚀 Дальнейшие шаги
-
-- Начните с интересующего вас раздела или последовательно изучайте темы.
-- Устанавливайте для себя цели и сроки изучения.
-- Не забывайте про отдых и регулярные перерывы для повышения эффективности обучения.
-
----
-
-## 📖 Дополнительные материалы
-
-- **Книги**:
-  - *"Effective Modern C++"* — Скотт Мейерс
-  - *"C++ Concurrency in Action"* — Энтони Уильямс
-  - *"Design Patterns: Elements of Reusable Object-Oriented Software"* — Эрих Гамма и др.
-
-- **Онлайн-курсы**:
-  - **Coursera**: [C++ Modern Development](https://www.coursera.org/specializations/c-plus-plus-modern-development)
-  - **Udemy**: [Advanced C++ Programming](https://www.udemy.com/course/advanced-c-programming/)
-
----
-
-Желаем вам успехов в изучении C++! Пусть ваш путь будет интересным и продуктивным.
-
----
