--- a/main/_Главная.md
+++ b/main/_Главная.md
@@ -9,6 +9,13 @@
     - [Классы и объекты](Основы%20C++/Классы%20и%20объекты.md)
     - [Наследование и полиморфизм](Основы%20C++/Наследование%20и%20полиморфизм.md)
     - [Указатели и ссылки](Основы%20C++/Указатели%20и%20ссылки.md)
+	- [Перегрузка операторов](Основы%20C++/Перегрузка%20операторов.md)
+	- [Конструкторы и деструкторы](Основы%20C++/Конструкторы%20и%20деструкторы.md)
+	- [Обработка ошибок](Основы%20C++/Обработка%20ошибок.md)
+	- [Пространства имён](Основы%20C++/Пространства%20имён.md)
+	- [Шаблоны функций и классов](Основы%20C++/Шаблоны%20функций%20и%20классов.md)
+	- [Стандартные контейнеры STL](Основы%20C++/Стандартные%20контейнеры%20STL.md)
+	- [Препроцессор и макросы](Основы%20C++/Препроцессор%20и%20макросы.md)
 3. [Управление памятью](Управление%20памятью.md)
     - [Динамическое выделение памяти](Управление%20памятью/Динамическое%20выделение%20памяти.md)
     - [RAII (Resource Acquisition Is Initialization)](Управление%20памятью/RAII.md)
