--- a/main/Введение.md
+++ b/main/Введение.md
@@ -35,7 +35,7 @@
 
 ## Как использовать документацию
 
-Для удобства использования документация разделена на файлы, каждый из которых посвящён конкретной теме. Воспользуйтесь содержанием на [главной странице](Главная.md) для быстрого перехода к нужным разделам.
+Для удобства использования документация разделена на файлы, каждый из которых посвящён конкретной теме. Воспользуйтесь содержанием на [главной странице](_Главная.md) для быстрого перехода к нужным разделам.
 
 ### Рекомендации по изучению
 
